--- a/ai-podcast-clipper-frontend/src/styles/globals.css
+++ b/ai-podcast-clipper-frontend/src/styles/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-
+@config "../../tailwind.config.js";
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -8,7 +8,6 @@
     var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-
 /* @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
