--- a/ai-podcast-clipper-frontend/src/styles/globals.css
+++ b/ai-podcast-clipper-frontend/src/styles/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @custom-variant dark (&:is(.dark *));
-/* @config "../../tailwind.config.js"; */
+@config "../../tailwind.config.js";
 
 @theme {
   --font-sans:
